# daily-code-base

applications/video-transcriber/: .gitignore  README.md  pyproject.toml
applications/video-transcriber/src/: audio.py  cli.py  logging_setup.py  models.py  pipeline.py  platforms.py  run_context.py  transcriber.py  utils.py
applications/video-transcriber/src/asr/: __init__.py  base.py  faster_whisper.py  mlx_audio_stt.py
applications/video-transcriber/src/fetchers/: __init__.py  base.py  local.py  stub.py
applications/video-transcriber/tests/: test_asr.py  test_audio.py  test_bootstrap.py  test_cli.py  test_fetchers.py  test_local_fetcher.py  test_pipeline.py  test_platforms.py  test_run_context.py  test_transcriber.py  test_utils.py
artificial-intelligence/andrew-ng-agentic-ai-course/: .gitignore  README.md  main.py  pyproject.toml
artificial-intelligence/andrew-ng-agentic-ai-course/m1/: README.md
artificial-intelligence/andrew-ng-agentic-ai-course/m2/graded/: C1M2_Assignment.ipynb  README.md  utils.py
artificial-intelligence/andrew-ng-agentic-ai-course/m2/ungraded/ugl_1/: M2_UGL_1.ipynb  utils.py
artificial-intelligence/andrew-ng-agentic-ai-course/m3/gl_1/: GL-M3.ipynb
artificial-intelligence/andrew-ng-agentic-ai-course/m3/ugl_1/: M3_UGL_1.ipynb  weather_note.txt
artificial-intelligence/andrew-ng-agentic-ai-course/m3/ugl_2/: M3_UGL_2.ipynb  email_tools.py  utils.py
artificial-intelligence/andrew-ng-agentic-ai-course/m4/ugl_1/: M4_UGL_1.ipynb
artificial-intelligence/andrew-ng-agentic-ai-course/m5/gl_1/: GL-M5.ipynb
artificial-intelligence/andrew-ng-agentic-ai-course/m5/ugl_1/: M5_UGL_1.ipynb  M5_UGL_1_R.ipynb  store_db.json
artificial-intelligence/andrew-ng-agentic-ai-course/m5/ugl_2/: M5_UGL_2.ipynb  campaign_summary_2026-06-15_18-04-32.md
misc-code/crafting-agent/: .env.example  .gitignore  README.md  pyproject.toml
misc-code/crafting-agent/02_research_agent_2_tool_use/: main.ipynb
misc-code/crafting-agent/03_research_agent_3_agentic_system/: README.md
misc-code/crafting-agent/04_market_team_agentic_system/: README.md
misc-code/crafting-agent/12agents-from-openai-agent-sdk/: untitled.md
misc-code/crafting-agent/helloworld/: README.md  agent.py  app.py  config.py  main.py  mcp_config.json  mcp_runtime.py  session_store.py  skills.py  tool_search.py
misc-code/crafting-agent/helloworld-v2/: main.ipynb  untitled.md
misc-code/crafting-agent/helloworld-v3/: untitled.md
misc-code/crafting-agent/helloworld/.hello-agent/: mcp_config.json
misc-code/crafting-agent/helloworld/static/: app.js  index.html  style.css
misc-code/crafting-agent/helloworld/tools/: __init__.py
misc-code/crafting-agent/research_agent_1_reflective/: main.ipynb
misc-code/crafting-agent/research_agent_2_tool_use/: README.md
misc-code/crafting-agent/research_agent_3_agentic_system/: main.ipynb
misc-code/crafting-agent/tests/: conftest.py  test_apply_patch_core.py  test_apply_patch_tool.py  test_background_process_tool.py  test_bash_tool.py  test_config.py  test_glob_tool.py  test_grep_tool.py  test_main_session.py  test_mcp_runtime.py  test_read_tool.py  test_session_store.py  test_tool_approval.py  test_tool_search.py  test_tools_registration.py
misc-code/crafting-agent/workflows/01_research_agent_1_reflective/: README.md  main.ipynb
misc-code/crafting-agent/workflows/02_research_agent_2_tool_use/: main.ipynb
misc-code/crafting-agent/workflows/03_research_agent_3_agentic_system/: main.ipynb
misc-code/leetcode-practices/rust/: Cargo.toml  README.md
misc-code/leetcode-practices/rust/src/: lib.rs  main.rs
(+730 files in other folders)
