[project]
name = "video-transcriber"
version = "0.1.0"
description = "Platform-gated video summarizer using local fetch tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.1.1",
  "mlx-audio>=0.4.4",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
