[project]
name = "crafting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aisuite[mcp]>=0.1.14",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "prompt-toolkit>=3.0.48",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
